--- a/app/views/pins/index.erb
+++ b/app/views/pins/index.erb
@@ -11,10 +11,10 @@
           <div class="pin">
             <div class="pin-header row">
               <div class="logo-thumbnail col-xs-3">
-                <% if "#{pin.category.name}" == "rails" %>
-                  <%= image_tag('rails-logo-thumbnail.png') %>
-                <% elsif "#{pin.category.name}" == "ruby" %>
+                <% if "#{pin.category_id}" == "1" %>
                   <%= image_tag('ruby-logo-thumbnail.png') %>
+                <% elsif "#{pin.category_id}" == "2" %>
+                  <%= image_tag('rails-logo-thumbnail.png') %>
                 <% end %>
               </div>
               <div class="col-xs-9">
