--- a/app/views/pins/new.erb
+++ b/app/views/pins/new.erb
@@ -1,44 +1,2 @@
 <h1>Create a New Pin</h1>
-<%= form_for @pin do |f| %>
-  <div class="form-group">
-    <label for="pin_title">Title (e.g. Ruby Tutorial)</label>
-    <%= f.text_field :title, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <label for="pin_slug" class="control-label">Slug (e.g. ruby-tutorial)</label>
-    <%= f.text_field :slug, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <label for="pin_category_id">Category</label>
-    <%= f.collection_select(:category_id, Category.all, :id, :name, {}, {class: "form-control"}) %>
-  </div>
-
-  <div class="form-group">
-    <label for="pin_url">URL</label>
-    <%= f.url_field :url, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <label for="pin_text">Description</label>
-    <%= f.text_area :text, class: "form-control", rows: "3" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.submit "Submit", class: "btn btn-primary btn-block" %>
-  </div>
-
-  <% if !@errors.nil? %>
-    <div class="error">
-      <label><%= pluralize(@errors.count, "error") %> prohibited this pin from being saved:</label>
-      <ul>
-        <% @errors.full_messages.each do |msg| %>
-          <li>
-            <%= msg.text %>
-          </li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-<% end %>
+<%= render "form" %>
