--- a/app/views/pins/show.erb
+++ b/app/views/pins/show.erb
@@ -13,6 +13,9 @@
     <b>Visit <%= "#{@pin.title}" %> at: </b>
     <%= link_to "#{@pin.url}", "#{@pin.url}", html_options = {target: "_blank", class: "url"} %>
   </p>
+  <p>
+    <%= link_to "Edit this pin!", "#{@pin.id}/edit", html_options = {class: "url"} %>
+  </p>
 </div>
 <br/>
 <a href="/">
