--- a/app/views/pins/show.erb
+++ b/app/views/pins/show.erb
@@ -9,6 +9,7 @@
   <p><%= "#{@pin.text}" %></p>
 
   <hr/>
+  <img src="<%= @pin.image.url(:medium) %>" alt="Pin image">
   <p>
     <b>Visit <%= "#{@pin.title}" %> at: </b>
     <%= link_to "#{@pin.url}", "#{@pin.url}", html_options = {target: "_blank", class: "url"} %>
